# Taotaotao

./: .gitignore  .gitmessage  AGENTS.md  AI_QUICKSTART.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_WALKTHROUGH.md  CONTEXT_MIGRATION.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  EMBEDDED_GUIDE.md  GEMINI.md  GOVERNANCE_RULES.md  QUICKSTART.md  README.md  SOURCE_MATERIALS.md  USAGE_GUIDE.md  pyproject.toml
.agents/: ITERATION_PLAN.md  PROGRESS.md  README_中文.md  RULES.md  architecture-decisions.yaml  profile.yaml
.agents/.managed/: generated-manifest.yaml  upstream-rule-catalog.yaml
.agents/overrides/: README_中文.md
.agents/progress/: ENTRY_TEMPLATE.md  README_中文.md
.claude/: README_中文.md  settings.local.json
.cursor/: README_中文.md
.cursor/rules/: README_中文.md  governance.mdc
.github/: PULL_REQUEST_TEMPLATE.md  README_中文.md  copilot-instructions.md
.github/instructions/: README_中文.md  project-governance.instructions.md
.opencode/: AGENTS.md  README_中文.md
docs/: CODE_WALKTHROUGH.md  CONTEXT_MIGRATION.md  CONTRIBUTING.md  DELTA_DECISIONS.md  EMBEDDED_GUIDE.md  GOVERNANCE_RULES.md  MIGRATION_GUIDE.md  NEXT_ITERATION_BASELINE.md  README_中文.md  ROOT_DIRECTORY_PHYSICAL_GOVERNANCE_CHECKLIST.md  SOURCE_MATERIALS.md  UPGRADE_CHECK.md  UPGRADE_FEEDBACK.md  UPGRADE_SUMMARY.md  USAGE_GUIDE.md
references/: README_中文.md
tests/: README_中文.md  sssss.c  test_governance.py
vibe_governance/: README_中文.md  __init__.py  cli.py  project.py
vibe_governance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+80 files in other folders)
